--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default ">
   <div class="container-fluid">
-    <div class="header">
+    <div class="navbar-header">
       <a href="#" class="navbar-brand">Recipe Book</a>
     </div>
     <div class="collapse navbar-collapse">
@@ -10,10 +10,14 @@
 </ul>
 <ul class="nav navbar-nav navbar-right">
   <li class="dropdown">
-    <a href="" class="dropdown-toggle" data-toggle="dropdown">Manage <span class="glyphicon glyphicon-cog"></span></a>
+    <a href="#" 
+    class="dropdown-toggle"
+     data-toggle="dropdown">Manage <span class="glyphicon glyphicon-cog"></span></a>
       <ul class="dropdown-menu">
-        <li><a href="#"></a>Save Changes</li>
-        <li><a href="#"></a>Get Data</li>
+        <li>
+          <a href="#"></a>Save Changes</li>
+        <li>
+          <a href="#"></a>Get Data</li>
       </ul>
   </li>
 </ul>
