--- a/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="" alt="" class="img-responsive">
+    <img [src]="recipe.imageURL" alt={{recipe.recipeName}} class="img-responsive" style="max-height: 300px">
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>Recipe Name</h1>
+    <h1>{{recipe.recipeName}}</h1>
   </div>
 </div>
 <div class="row">
@@ -18,6 +18,11 @@
       <li><a href="#"></a>Delete Recipe</li>
     </ul>
   </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    {{recipe.description}}
   </div>
 </div>
 <div class="row">
