--- a/src/app/recipe/recipe-item/recipe-item.component.html
+++ b/src/app/recipe/recipe-item/recipe-item.component.html
@@ -1,3 +1,12 @@
-<p>
-  recipe-item works!
-</p>
+<a href="#" (click)="onRecipeSelect()" class="list-group-item clearfix" >
+    <div class="pull-left">
+        <h4 class="list-group-item-heading">{{recipeItem.recipeName}}</h4>
+        <p class="list-group-item-text">{{recipeItem.description}}</p>
+    </div>
+    <span class="pull-right">
+        <img [src]="recipeItem.imageURL" 
+        alt="{recipeItem.recipeName{}}" 
+        class="img-responsive"
+        style="max-height: 50px">
+    </span>
+    </a>
