--- a/src/app/recipe/recipes/recipes.component.html
+++ b/src/app/recipe/recipes/recipes.component.html
@@ -1,8 +1,13 @@
   <div class="row">
     <div class="col-md-5">
-      <app-recipe-list></app-recipe-list>
+  <app-recipe-list (selectRecipe)="onSelectRecipe($event)"></app-recipe-list>
     </div>
     <div class="col-md-7">
-      <app-recipe-detail></app-recipe-detail>
+      <app-recipe-detail
+      *ngIf="selectedRecipe; else infoText"
+      [recipe]="selectedRecipe">
+      <ng-template #infoText>
+        Select a Recipe
+      </ng-template></app-recipe-detail>
     </div>
   </div>
