--- a/src/app/shopping/shopping-list/shopping-list.component.html
+++ b/src/app/shopping/shopping-list/shopping-list.component.html
@@ -1,5 +1,13 @@
 <div class="row">
   <div class="col-xs-10">
     <app-shopping-list-edit></app-shopping-list-edit>
-  </div>
+  <hr>
+  <ul class="list-group">
+    <a class="list-group-item" 
+    style="cursor: pointer"
+    *ngFor="let ingredient of ingredients">
+    {{ingredient.ingredientName}}({{ingredient.amount}})
+  </a>
+  </ul>
+</div>
 </div>
