--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,15 +9,15 @@
   <li><a href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>
 </ul>
 <ul class="nav navbar-nav navbar-right">
-  <li class="dropdown">
+  <li class="dropdown" appDropdown>
     <a href="#" 
     class="dropdown-toggle"
      data-toggle="dropdown">Manage <span class="glyphicon glyphicon-cog"></span></a>
       <ul class="dropdown-menu">
         <li>
-          <a href="#"></a>Save Changes</li>
+          <a href="#">Save Changes</a></li>
         <li>
-          <a href="#"></a>Get Data</li>
+          <a href="#">Get Data</a></li>
       </ul>
   </li>
 </ul>
