--- a/src/app/recipe/recipes/recipes.component.html
+++ b/src/app/recipe/recipes/recipes.component.html
@@ -6,8 +6,9 @@
       <app-recipe-detail
       *ngIf="selectedRecipe; else infoText"
       [recipe]="selectedRecipe">
+    </app-recipe-detail>
       <ng-template #infoText>
         Select a Recipe
-      </ng-template></app-recipe-detail>
+      </ng-template>
     </div>
   </div>
