--- a/src/app/recipe/recipe-list/recipe-list.component.html
+++ b/src/app/recipe/recipe-list/recipe-list.component.html
@@ -7,8 +7,7 @@
     <div  class="row">
         <div class="col-xs-12">
            <app-recipe-item *ngFor="let recipe of recipes" 
-           [recipeItem]="recipe"
-           (selectedRecipe)="onSelectRecipe(recipe)"></app-recipe-item>
+           [recipeItem]="recipe"></app-recipe-item>
         </div>
     </div>
 </div>
