--- a/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -10,12 +10,12 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <div class="btn-group" appDropdown>
-      <button type="button" class="btn btn-primary dropdown-toggle" appDropdown>Manage Recipe <span class="caret"></span></button>
+    <div appDropdown>
+      <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
     <ul class="dropdown-menu">
-      <li><a href="#">To Shopping List</a></li>
-      <li><a href="#">Edit Recipe</a></li>
-      <li><a href="#">Delete Recipe</a></li>
+      <li><a  (click)="addToCart()" style="cursor : pointer">Add to cart</a></li>
+      <li><a href="#">Edit Recipe <span class="glyphicon glyphicon-pencil"></span></a></li>
+      <li><a href="#">Delete Recipe  <span class="glyphicon glyphicon-trash"></span></a></li>
     </ul>
   </div>
   </div>
@@ -27,6 +27,10 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
+      <ul class="list-group">
+        <li *ngFor="let ingredient of recipe.ingredients" class="list-group-item">
+          {{ ingredient.ingredientName }} - {{ingredient.amount}}
+        </li>
+      </ul>
   </div>
 </div>
