--- a/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -13,9 +13,9 @@
     <div appDropdown>
       <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
     <ul class="dropdown-menu">
-      <li><a  (click)="addToCart()" style="cursor : pointer">Add to cart</a></li>
-      <li><a href="#">Edit Recipe <span class="glyphicon glyphicon-pencil"></span></a></li>
-      <li><a href="#">Delete Recipe  <span class="glyphicon glyphicon-trash"></span></a></li>
+      <li><a  (click)="addToCart()" style="cursor : pointer">Add to cart <span class="glyphicon glyphicon-shopping-cart pull-right"></span></a></li>
+      <li><a style="cursor:pointer">Edit Recipe <span class="glyphicon glyphicon-pencil pull-right"></span></a></li>
+      <li><a style="cursor:pointer">Delete Recipe  <span class="glyphicon glyphicon-trash pull-right"></span></a></li>
     </ul>
   </div>
   </div>
