--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,19 +5,21 @@
     </div>
     <div class="collapse navbar-collapse">
 <ul class="nav navbar-nav">
-  <li><a href="#" (click)="onSelect('recipe')">Recipies</a></li>
-  <li><a href="#" (click)="onSelect('shopping-list')">Shopping List <span class="glyphicon glyphicon-shopping-cart"></span></a></li>
+  <li routerLinkActive="active"
+  [routerLinkActiveOptions]="{exactly : true}"><a [routerLink]="[ '/recipes' ]">Recipies</a></li>
+  <li routerLinkActive="active"
+  [routerLinkActiveOptions]="{exactly : true}"><a [routerLink]="[ '/shopping-list' ]">Shopping List <span class="glyphicon glyphicon-shopping-cart"></span></a></li>
 </ul>
 <ul class="nav navbar-nav navbar-right">
   <li class="dropdown" appDropdown>
-    <a href="#" 
+    <a style="cursor:pointer" 
     class="dropdown-toggle"
      data-toggle="dropdown">Manage <span class="glyphicon glyphicon-cog"></span></a>
       <ul class="dropdown-menu">
         <li>
-          <a href="#">Save Changes <span class="glyphicon glyphicon-ok"></span></a></li>
+          <a style="cursor:pointer">Save Changes <span class="glyphicon glyphicon-ok"></span></a></li>
         <li>
-          <a href="#">Get Data <span class="glyphicon glyphicon-download-alt"></span></a></li>
+          <a style="cursor:pointer">Get Data <span class="glyphicon glyphicon-download-alt"></span></a></li>
       </ul>
   </li>
 </ul>
