--- a/src/app/recipe/recipe-item/recipe-item.component.html
+++ b/src/app/recipe/recipe-item/recipe-item.component.html
@@ -1,4 +1,7 @@
-<a href="#" (click)="onRecipeSelect()" class="list-group-item clearfix" >
+<a style="cursor: pointer"
+  class="list-group-item clearfix" 
+  [routerLink]="index"
+  routerLinkActive="active">
     <div class="pull-left">
         <h3 class="list-group-item-heading">{{recipeItem.recipeName}}</h3>
         <p class="list-group-item-text">{{recipeItem.description}}</p>
