--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,28 +1,50 @@
 <nav class="navbar navbar-default ">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Recipe Book</a>
+      <a routerLink="/" class="navbar-brand">Book of Spices</a>
     </div>
     <div class="collapse navbar-collapse">
-<ul class="nav navbar-nav">
-  <li routerLinkActive="active"
-  [routerLinkActiveOptions]="{exactly : true}"><a [routerLink]="[ '/recipes' ]">Recipies</a></li>
-  <li routerLinkActive="active"
-  [routerLinkActiveOptions]="{exactly : true}"><a [routerLink]="[ '/shopping-list' ]">Shopping List <span class="glyphicon glyphicon-shopping-cart"></span></a></li>
-</ul>
-<ul class="nav navbar-nav navbar-right">
-  <li class="dropdown" appDropdown>
-    <a style="cursor:pointer" 
-    class="dropdown-toggle"
-     data-toggle="dropdown">Manage <span class="glyphicon glyphicon-cog"></span></a>
-      <ul class="dropdown-menu">
-        <li>
-          <a style="cursor:pointer">Save Changes <span class="glyphicon glyphicon-ok"></span></a></li>
-        <li>
-          <a style="cursor:pointer">Get Data <span class="glyphicon glyphicon-download-alt"></span></a></li>
+      <ul class="nav navbar-nav">
+        <li
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exactly: true }"
+        >
+          <a [routerLink]="['/recipes']">Recipies</a>
+        </li>
+        <li
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exactly: true }"
+        >
+          <a [routerLink]="['/shopping-list']"
+            >Shopping List
+            <span class="glyphicon glyphicon-shopping-cart"></span
+          ></a>
+        </li>
       </ul>
-  </li>
-</ul>
-</div>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown" appDropdown>
+          <a
+            style="cursor:pointer"
+            class="dropdown-toggle"
+            data-toggle="dropdown"
+            >Manage <span class="glyphicon glyphicon-cog"></span
+          ></a>
+          <ul class="dropdown-menu">
+            <li>
+              <a style="cursor:pointer"
+                >Save Changes
+                <span class="glyphicon glyphicon-ok pull-right"></span
+              ></a>
+            </li>
+            <li>
+              <a style="cursor:pointer"
+                >Get Data
+                <span class="glyphicon glyphicon-download-alt pull-right"></span
+              ></a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
