--- a/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -1,36 +1,58 @@
 <div class="row">
   <div class="col-xs-12">
-    <img [src]="recipe.imageURL" alt={{recipe.recipeName}} class="img-responsive" style="max-height: 300px">
+    <img
+      [src]="recipe.imageURL"
+      alt="{{ recipe.recipeName }}"
+      class="img-responsive"
+      style="max-height: 300px"
+    />
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>{{recipe.recipeName}}</h1>
+    <h1>{{ recipe.recipeName }}</h1>
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
     <div appDropdown>
-      <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
-    <ul class="dropdown-menu">
-      <li><a  (click)="addToCart()" style="cursor : pointer">Add to cart <span class="glyphicon glyphicon-shopping-cart pull-right"></span></a></li>
-      <li><a style="cursor:pointer">Edit Recipe <span class="glyphicon glyphicon-pencil pull-right"></span></a></li>
-      <li><a style="cursor:pointer">Delete Recipe  <span class="glyphicon glyphicon-trash pull-right"></span></a></li>
-    </ul>
-  </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    {{recipe.description}}
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-      <ul class="list-group">
-        <li *ngFor="let ingredient of recipe.ingredients" class="list-group-item">
-          {{ ingredient.ingredientName }} - {{ingredient.amount}}
+      <button type="button" class="btn btn-primary dropdown-toggle">
+        Manage Recipe <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu">
+        <li>
+          <a (click)="addToCart()" style="cursor : pointer"
+            >Add to cart
+            <span class="glyphicon glyphicon-shopping-cart pull-right"></span
+          ></a>
+        </li>
+        <li>
+          <a style="cursor:pointer" routerLink="edit"
+            >Edit Recipe
+            <span class="glyphicon glyphicon-pencil pull-right"></span
+          ></a>
+        </li>
+        <li>
+          <a style="cursor:pointer"
+            >Delete Recipe
+            <span class="glyphicon glyphicon-trash pull-right"></span
+          ></a>
         </li>
       </ul>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    {{ recipe.description }}
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <ul class="list-group">
+      <li *ngFor="let ingredient of recipe.ingredients" class="list-group-item">
+        {{ ingredient.ingredientName }} - {{ ingredient.amount }}
+      </li>
+    </ul>
   </div>
 </div>
