--- a/src/app/recipe/recipe-item/recipe-item.component.html
+++ b/src/app/recipe/recipe-item/recipe-item.component.html
@@ -1,15 +1,19 @@
-<a style="cursor: pointer"
-  class="list-group-item clearfix" 
+<a
+  style="cursor: pointer"
+  class="list-group-item clearfix"
   [routerLink]="index"
-  routerLinkActive="active">
-    <div class="pull-left">
-        <h3 class="list-group-item-heading">{{recipeItem.recipeName}}</h3>
-        <p class="list-group-item-text">{{recipeItem.description}}</p>
-    </div>
-    <span class="pull-right">
-        <img [src]="recipeItem.imageURL" 
-        alt="{recipeItem.recipeName{}}" 
-        class="img-responsive"
-        style="max-height: 50px">
-    </span>
-    </a>
+  routerLinkActive="active"
+>
+  <div class="pull-left">
+    <h3 class="list-group-item-heading">{{ recipeItem.recipeName }}</h3>
+    <p class="list-group-item-text">{{ recipeItem.shortDesc }}</p>
+  </div>
+  <span class="pull-right">
+    <img
+      [src]="recipeItem.imageURL"
+      alt="{recipeItem.recipeName{}}"
+      class="img-responsive"
+      style="max-height: 50px"
+    />
+  </span>
+</a>
