--- a/src/app/recipe/recipe-list/recipe-list.component.html
+++ b/src/app/recipe/recipe-list/recipe-list.component.html
@@ -1,18 +1,18 @@
 <div class="row">
+  <div class="col-xs-12">
+    <div>
+      <a routerLink="new" class="btn btn-success">New Recipe</a>
+    </div>
+  </div>
+  <hr />
+
+  <div class="row">
     <div class="col-xs-12">
-        <div class="btn btn-success">New Recipe</div>
+      <app-recipe-item
+        *ngFor="let recipe of recipes; let i = index"
+        [recipeItem]="recipe"
+        [index]="i"
+      ></app-recipe-item>
     </div>
-    <hr>
-
-    <div  class="row">
-        <div class="col-xs-12">
-           <app-recipe-item *ngFor="let recipe of recipes; let i=index" 
-           [recipeItem]="recipe"
-           [index]="i"></app-recipe-item>
-        </div>
-    </div>
+  </div>
 </div>
-
-
-
-
