--- a/src/app/shopping/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping/shopping-list-edit/shopping-list-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit)="onAdd(f)" #f="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
@@ -8,18 +8,28 @@
             type="text"
             id="name"
             class="form-control"
-            #ingredientNameInput
+            name="ingName"
+            ngModel
+            required
           />
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <input type="number" id="amount" class="form-control" #amountInput />
+          <input
+            type="number"
+            id="amount"
+            class="form-control"
+            name="ingAmount"
+            ngModel
+            required
+            pattern="^[1-9]+[0-9]*$"
+          />
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12 btn-toolbar">
-          <button class="btn btn-success" type="submit" (click)="onAdd()">
-            Add
+          <button class="btn btn-success" type="submit" [disabled]="!f.valid">
+            {{ isEditMode ? 'Update' : 'Add' }}
           </button>
           <button class="btn btn-danger" type="button">Delete</button>
           <button class="btn btn-primary" type="button">Clear</button>
