--- a/src/app/recipe/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe/recipe-edit/recipe-edit.component.html
@@ -1,82 +1,97 @@
-<h3 *ngIf="isEditMode; else addMode">
-  Edit Mode
-</h3>
+<div class="row">
+  <div class="col-xs-10">
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input
+              type="text"
+              id="name"
+              class="form-control"
+              formControlName="name"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="imgPath">Image URL</label>
+            <input
+              type="text"
+              id="imgPath"
+              class="form-control"
+              formControlName="imgPath"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <img src="" alt="" class="img-responsive" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="shortDesc">Short Description</label>
+            <input
+              type="text"
+              id="shortDesc"
+              class="form-control"
+              formControlName="shortDesc"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="desc">Description</label>
+            <textarea
+              type="text"
+              id="desc"
+              class="form-control"
+              rows="6"
+              formControlName="desc"
+            >
+            </textarea>
+          </div>
+        </div>
+      </div>
 
-<ng-template #addMode>
-  <div class="row">
-    <div class="col-xs-10">
-      <form>
-        <div class="row">
-          <div class="col-xs-12">
-            <div class="form-group">
-              <label for="Name">Name</label>
-              <input type="text" id="name" class="form-control" />
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="row">
+            <div class="col-xs-8">
+              <label for="ingName">Ingredient Name</label>
+              <input type="text" id="ingName" class="form-control" />
+            </div>
+            <div class="col-xs-2">
+              <label for="ingAmount">Amount</label>
+              <input type="text" id="ingAmount" class="form-control" />
+            </div>
+            <div class="col-xs-2">
+              <label for="clear">Clear</label>
+              <button type="button" id="clear" class="btn btn-danger">
+                X
+              </button>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-xs-12">
-            <div class="form-group">
-              <label for="imgPath">Image URL</label>
-              <input type="text" id="imgPath" class="form-control" />
-            </div>
-          </div>
+      </div>
+      <hr />
+      <div class="row">
+        <div class="col-xs-12 btn-toolbar">
+          <button type="button" class="btn btn-danger pull-right">
+            Cancel
+          </button>
+          <button type="submit" class="btn btn-success pull-right">
+            Save
+          </button>
         </div>
-        <div class="row">
-          <div class="col-xs-12">
-            <img src="" alt="" class="img-responsive" />
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12">
-            <div class="form-group">
-              <label for="shortDesc">Short Description</label>
-              <input type="text" id="shortDesc" class="form-control" />
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12">
-            <div class="form-group">
-              <label for="desc">Description</label>
-              <textarea type="text" id="desc" class="form-control" rows="6">
-              </textarea>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-xs-12">
-            <div class="row">
-              <div class="col-xs-8">
-                <label for="ingName">Ingredient Name</label>
-                <input type="text" id="ingName" class="form-control" />
-              </div>
-              <div class="col-xs-2">
-                <label for="ingAmount">Amount</label>
-                <input type="text" id="ingAmount" class="form-control" />
-              </div>
-              <div class="col-xs-2">
-                <label for="clear">Clear</label>
-                <button type="button" id="clear" class="btn btn-danger">
-                  X
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <hr />
-        <div class="row">
-          <div class="col-xs-12 btn-toolbar">
-            <button type="button" class="btn btn-danger pull-right">
-              Cancel
-            </button>
-            <button type="submit" class="btn btn-success pull-right">
-              Save
-            </button>
-          </div>
-        </div>
-      </form>
-    </div>
+      </div>
+    </form>
   </div>
-</ng-template>
+</div>
