--- a/src/app/recipe/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe/recipe-edit/recipe-edit.component.html
@@ -78,7 +78,7 @@
             </div>
             <div class="col-xs-2">
               <input
-                type="text"
+                type="number"
                 class="form-control"
                 formControlName="ingAmount"
               />
