--- a/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -33,7 +33,7 @@
           ></a>
         </li>
         <li>
-          <a style="cursor:pointer"
+          <a style="cursor:pointer" (click)="deleteRecipe()"
             >Delete Recipe
             <span class="glyphicon glyphicon-trash pull-right"></span
           ></a>
