Routing,HTTP,lazy loading

--- a/src/app/recipe/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe/recipe-edit/recipe-edit.component.html
@@ -23,13 +23,14 @@
               id="imgPath"
               class="form-control"
               formControlName="imgPath"
+              #imgPath
             />
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <img src="" alt="" class="img-responsive" />
+          <img [src]="imgPath.value" alt="" class="img-responsive" />
         </div>
       </div>
       <div class="row">
@@ -96,7 +97,7 @@
         </div>
       </div>
       <hr />
-      <div class="row">
+      <div class="row" style="margin-bottom: 20px">
         <div class="col-xs-12 btn-toolbar">
           <button
             type="button"
@@ -114,7 +115,7 @@
           </button>
           <button
             type="button"
-            class="btn btn-primary pull-right"
+            class="btn btn-primary pull-left"
             (click)="addIngredient()"
           >
             Add ingredient
