--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,28 +22,50 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown" appDropdown>
-          <a
-            style="cursor:pointer"
-            class="dropdown-toggle"
-            data-toggle="dropdown"
-            >Manage <span class="glyphicon glyphicon-cog"></span
-          ></a>
-          <ul class="dropdown-menu">
-            <li>
-              <a style="cursor:pointer"
-                >Save Changes
-                <span class="glyphicon glyphicon-ok pull-right"></span
-              ></a>
-            </li>
-            <li>
-              <a style="cursor:pointer"
-                >Get Data
-                <span class="glyphicon glyphicon-download-alt pull-right"></span
-              ></a>
-            </li>
-          </ul>
-        </li>
+        <ng-template [ngIf]="!isAuthenticated()">
+          <li
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exactly: true }"
+          >
+            <a [routerLink]="['/signUp']">Sign Up</a>
+          </li>
+          <li
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exactly: true }"
+          >
+            <a [routerLink]="['/signIn']">Sign In</a>
+          </li>
+        </ng-template>
+
+        <ng-template [ngIf]="isAuthenticated()">
+          <li>
+            <a (click)="logOut()" style="cursor:pointer">Log Out</a>
+          </li>
+          <li class="dropdown" appDropdown>
+            <a
+              style="cursor:pointer"
+              class="dropdown-toggle"
+              data-toggle="dropdown"
+              >Manage <span class="glyphicon glyphicon-cog"></span
+            ></a>
+            <ul class="dropdown-menu">
+              <li>
+                <a style="cursor:pointer" (click)="saveData()"
+                  >Save Changes
+                  <span class="glyphicon glyphicon-ok pull-right"></span
+                ></a>
+              </li>
+              <li>
+                <a style="cursor:pointer" (click)="fetchData()"
+                  >Get Data
+                  <span
+                    class="glyphicon glyphicon-download-alt pull-right"
+                  ></span
+                ></a>
+              </li>
+            </ul>
+          </li>
+        </ng-template>
       </ul>
     </div>
   </div>
