--- a/src/app/recipe/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe/recipe-edit/recipe-edit.component.html
@@ -107,11 +107,20 @@
             Cancel
           </button>
           <button
+            *ngIf="!isEditMode"
             type="submit"
             class="btn btn-success pull-right"
             [disabled]="!recipeForm.valid"
           >
-            Save
+            Add Recipe
+          </button>
+          <button
+            *ngIf="isEditMode"
+            type="submit"
+            class="btn btn-success pull-right"
+            [disabled]="!recipeForm.valid"
+          >
+            Modify
           </button>
           <button
             type="button"
