removed api key and modified PNFC

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,2 +1,10 @@
 <h1>Welcome to Book Of Spices!</h1>
-<p class="bg-danger">Please log in to continue</p>
+<p class="bg-danger" style="width: 20%">Please log in to continue</p>
+
+<a
+  [routerLink]="['/signIn']"
+  class="btn btn-primary"
+  style="margin-right: 10px;"
+>
+  Login
+</a>
