--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,6 +1,7 @@
 <h1>Welcome to Book Of Spices!</h1>
-<p class="bg-danger" style="width: 20%">Please log in to continue</p>
-
+<div class="alert alert-danger" style="width: 40%">
+  <p>Please log in to continue</p>
+</div>
 <a
   [routerLink]="['/signIn']"
   class="btn btn-primary"
