--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -9,7 +9,7 @@
           404 Not Found
         </h2>
         <div class="error-details">
-          Sorry, an error has occured, Requested page not found!
+          Requested page does not exist!
         </div>
         <div class="error-actions">
           <a [routerLink]="['/home']" class="btn btn-primary btn-lg">
