--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -18,11 +18,14 @@
           id="password"
           name="password"
           class="form-control"
+          minlength="6"
           ngModel
         />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">Log In</button>
+        <button class="btn btn-primary" type="submit" [disabled]="!f.valid">
+          Log In
+        </button>
       </div>
     </form>
   </div>
